# feast-dev-feast-credit-score-local-tutorial

./: README.md  credit_model.py  pyproject.toml  streamlit_app.py
feature_repo/: feature_store.yaml
