[project]
name = "feast-credit-score-local-tutorial"
version = "0.1.0"
description = "A local demo project of Feast feature server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feast",
    "pandas",
    "scikit-learn",
    "redis",
    "dask",
    "grpcio",
    "grpcio-tools",
    "grpcio-reflection",
]
[project.optional-dependencies]
streamlit = [
    "streamlit>=1.50.0",
    "shap>=0.49.0",
    "matplotlib>=3.10.7",
]
